--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
-  "homepage": "https://smoqu.github.io/Yes",
   "name": "yes",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "start": "npm run server",
-    "dev": "nodemon run server",
-    "deploy": "gh-pages -d ./"
+    "dev": "nodemon run server"
   },
   "author": "",
   "license": "ISC",
@@ -17,7 +15,6 @@
     "uuid": "^8.3.1"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
     "nodemon": "^2.0.6"
   }
 }
